--- a/src/input.css
+++ b/src/input.css
@@ -3,4 +3,18 @@
 @tailwind utilities;
 
 @layer base {
+	::backdrop {
+		background-color: black;
+		opacity: 0.5;
+	}
+
+	/* input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+	} */
+
+	/* [type="radio"]:checked,
+	[type="radio"]:focus {
+		background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='rgb(52, 95, 246)' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3.5'/%3e%3c/svg%3e");
+	} */
 }
