--- a/src/input.css
+++ b/src/input.css
@@ -13,8 +13,7 @@
 		-webkit-appearance: none;
 	} */
 
-	/* [type="radio"]:checked,
-	[type="radio"]:focus {
-		background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='rgb(52, 95, 246)' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3.5'/%3e%3c/svg%3e");
-	} */
+	[type="radio"]:checked {
+		background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='rgb(60, 179, 171)' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4.5'/%3e%3c/svg%3e");
+	}
 }
