--- a/src/input.css
+++ b/src/input.css
@@ -11,4 +11,9 @@
 	[type="radio"]:checked {
 		background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='rgb(60, 179, 171)' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4.5'/%3e%3c/svg%3e");
 	}
+
+	/* Accessibility features */
+	button {
+		@apply focus:outline-none focus:ring-2 focus:ring-skin-brand-pri;
+	}
 }
